# Ady-Resolver

./: .gitignore  DATA_SOURCES.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: custom_addresses.csv  custom_sources_manifest.json
examples/demo_reference/: metadata.json  queries.csv  reference_addresses.csv  resolver_input.csv
models/: stage2_model.json  stage2_model_pre_compound.json
sources/: ms_public_sources.json
src/: address_dataset_build.py  address_dataset_generator.py  address_maris.py  address_noise.py  address_openaddresses.py  address_resolver.py  address_source_audit.py  address_source_common.py  address_source_downloads.py  address_source_loading.py  address_source_manifest.py  address_source_parsers.py  resolver_app.py  resolver_app_config.py  resolver_app_storage.py  resolver_app_ui.py  resolver_batch_io.py  resolver_http.py  resolver_models.py  resolver_parsing.py  resolver_reference.py  resolver_reference_cache.py  resolver_service.py  resolver_stage2.py  train_from_addresses.py
src/static/: app.css  app.js  index.html
tests/: test_active_learning.py  test_batch_resolve.py  test_demo_accuracy_smoke.py  test_evaluation_metrics.py  test_generator_noise.py  test_openaddresses_direct.py  test_resolver_regressions.py  test_source_manifest_audit.py  test_source_parsing.py  test_static_ui_assets.py  test_training_improvements.py  test_zip_city_enrichment.py
