[project]
name = "ady-resolver"
version = "0.1.0"
description = "Mississippi address dataset generator and resolver using cached public address sources."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "bt1142msstate" }
]
keywords = ["address-resolution", "record-linkage", "mississippi", "openaddresses", "maris"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bt1142msstate/Ady-Resolver"
Repository = "https://github.com/bt1142msstate/Ady-Resolver"
Issues = "https://github.com/bt1142msstate/Ady-Resolver/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
